Started Context Menu
Added contextMenu.js which sets up a menu item for defining a word.

--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,13 @@
     "icons": {
         
     },
+    "permissions": [
+        "contextMenus"
+    ],
     "host_permissions": [
         "https://api.dictionaryapi.dev/"
-    ]
+    ],
+    "background": {
+        "service_worker": "contextMenu.js"
+    }
 }
