Added code to display the word and definitions within the popup

--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,8 @@
         
     },
     "permissions": [
-        "contextMenus"
+        "contextMenus",
+        "storage"
     ],
     "host_permissions": [
         "https://api.dictionaryapi.dev/"
